# gix-web

./: Cargo.toml  README.md
css/: index.css
src/: auth.rs  main.rs  middleware.rs  page.rs  repo.rs
templates/: directory.html  index.html
templates/css/: index.css
